# EvolveRFC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.py
.github/workflows/: nightly-rfc.yml
config/: mcp.example.yaml  nightly.example.yaml  workflow.example.yaml  workflow.yaml
docs/: 概念草案.md
nightly_output/: .gitkeep
prompts/: architect.txt  clerk.txt  cost_control.txt  innovator.txt  security.txt
scripts/: run_nightly.sh
src/evolve_rfc/: __init__.py  settings.py
src/evolve_rfc/agents/: __init__.py  base.py  clerk.py  roles.py
src/evolve_rfc/cli/: __init__.py  __main__.py  main.py
src/evolve_rfc/core/: __init__.py  router.py  state.py
src/evolve_rfc/mcp/: __init__.py  main.py  server.py
src/evolve_rfc/nightly/: __init__.py  __main__.py  daemon.py  github.py
src/evolve_rfc/nightly/modes/: __init__.py  audit.py  creative.py  discuss.py
src/evolve_rfc/shared/: __init__.py  debate.py  tools.py
src/evolve_rfc/ui/: __init__.py  console.py  panels.py  textual_app.py  textual_ui.py  workflow.py
src/evolve_rfc/ui/widgets/: __init__.py  panels.py  panes.py  screens.py
src/evolve_rfc/utils/: __init__.py  config.py  parser.py
src/evolve_rfc/workflow/: __init__.py  __main__.py  edges.py  graph.py  nodes.py
tests/: __init__.py  test_parser.py  test_router.py  test_state.py
